After uploading to PyPI, a few more tweaks were necessary to the docs.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,7 +2,7 @@
 CHANGES
 =======
 
-Version 0.0.0 (2010-12-12)
---------------------------
+Version 0.1dev (2010-12-21)
+===========================
 
 - Initial Release
